--- a/css/petshop.css
+++ b/css/petshop.css
@@ -35,8 +35,61 @@ nav a {
 nav a:hover { 
     color: #6DD432;
 }
+h2{
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
 #ItemContato {
     background-image: none;
     padding-right: 0;
     margin-right: 0;
+}
+#produto .flex-container{
+    margin-top: 43px;
+
+}
+/* grupos de elementos diferentes */
+.fundo-verde{
+    background-color: #BDFF9c;
+}
+.container{
+    width: 900px;
+    /* border: 1px solid black; */
+    margin: 0 auto;
+    padding: 56px 0;
+}
+.flex-container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.flex-container .col{
+    width: 430px;
+}
+.produto{
+    width: 235px;
+}
+.produto figure{
+    border: 1px solid #c4c4c4;
+    background-color: #fff;
+    margin: 0 0 15px 0;
+    text-align: center;
+    height: 160px;
+    padding: 0;
+    line-height: 160px;
+}
+.texto-centralizado{
+    text-align: center;
+}
+.produto figure img{
+    vertical-align: middle;
+}
+.btn-pata{
+    border: 1px solid #91e467;
+    background-color: #d2fbbd;
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    color: #000;
 }
